# genus-cutting-tool

./: GIMTruncate.cpp  GIMmodTruncate.cpp  GIMmodTruncate.h  Main.cpp  MouseInteractorStylePP.h  MyTruncate.h  ProjectHome.md  VTK_Header.h  geodesic cut tool.docx  geodesicVTK.cpp  geodesicVTK.h  geodesicVTK.sln  geodesicVTK.vcxproj  geodesicVTK.vcxproj.filters  stdafx.cpp  utils.cpp  utils.h
GeodesicsOnMeshes/: CMakeLists.txt
GeodesicsOnMeshes/Data/: Ellipsoid.vtp
GeodesicsOnMeshes/Latex/: InsightArticle.cls  document.aux  document.bbl  document.blg  document.brf  document.dvi  document.tex  document.toc  references.bib
GeodesicsOnMeshes/Testing/: TestGeodesicDistance.cxx  vtkMeshGeodesicTestingIncludes.h  vtkTestingObjectFactory2.cmake
OpenMesh/lib/: OpenMeshTools.lib
Parameterization/: IDCutHedge.cpp  IDList.h  IDSet.cxx  MeshStructure.h  MyParameterization.cpp  MyParameterization.h  Point3d.h  PointTool.cxx  PolarList.h  PolygonsData.cpp  PolygonsData.h  Polyhedron.h  Util.cpp  Util.h  stretch-minimizing.h
Parameterization/Debug-lib/: SMId.lib
Parameterization/Release-lib/: SMI.lib
SMI04CODE/: API.cpp  API.h  IDList.h  IDSet.cxx  IDSet.h  PCBCGSolver.cxx  PCBCGSolver.h  Parameterization.cxx  Point2d.h  Point3d.h  PointTool.cxx  PointTool.h  PolarList.h  Polyhedron.h  SMI.cpp  SMI.sln  SMI.vcxproj  SMI.vcxproj.filters  stdafx.cpp
UVAtlas/: UVAtlas_2013.vcxproj
UVAtlas/inc/: UVAtlas.h
UVAtlas/isochart/: isochartengine.cpp  isochartutil.h
ViennaCL/CMake/: ViennaCLConfig.cmake  ViennaCLConfigVersion.cmake
customVTK/: vtkBoostExtractLargestComponentEx.cxx  vtkBoostExtractLargestComponentEx.h  vtkDijkstraGraphGeodesicPathMultiEndPoints.h  vtkDijkstraGraphGeodesicPathMultiStartEndPoints.cxx  vtkDijkstraGraphGeodesicPathMultiStartEndPoints.h  vtkFeatureEdgesEx.cxx  vtkFeatureEdgesEx.h
experiment/test00/: disk_torus_propose.ply  result_original.txt
experiment/test01/: disk_torus2_original.ply  result_original.txt
experiment/test02/: result_original.txt
experiment/test03/: disk_torus3_propose.ply  result_original.txt
experiment/test04/: result_propose.txt
experiment/test05/: disk_eight_propose.ply  result_original.txt  result_propose.txt
experiment/test06/: disk_eight_original.ply  disk_eight_propose.ply
experiment/test07/: disk_genus3horizontal_propose.ply
experiment/test08/: disk_genus3horizontal_original.ply  disk_genus3horizontal_propose.ply  result_original.txt  start id.txt
experiment/test09/: disk_genus3triangulate_original.ply  disk_genus3triangulate_propose.ply
experiment/test10/: disk_genus3_original.ply  result_original.txt
experiment/test11/: disk_rocket_original.ply  result_original.txt
geodesic/: geodesic_algorithm_exact.cpp  geodesic_algorithm_exact.h  geodesic_algorithm_exact_elements.h  geodesic_mesh.h  geodesic_mesh_elements.h
grapp 2015/: genus cutting.tex  genus_cutting.bib  genus_cutting.tex
model_data/: bun_zipper.ply  bun_zipper_res2.ply  bunny_no_hole.ply  bunny_p65.ply_degree3.ply  bunny_p65_param.ply  bunny_p65_param_surface.ply  cow_mc-lr.ply  degree10.ply  dragon.ply  dragon_renum.ply  genus3horizontal.ply  hand.renumber.ply  hand.renumber_hole.ply  hand.renumber_hole3.ply  hand.renumber_hole4.ply  maxplanck.ply  neptune.off  rocker-arm.ply  torus3.ply  torus_hole.ply  torus_hole2.ply  twisting_torus.ply
trunk/: GIMTruncate.h  GIMmodTruncate.cpp  GIMmodTruncate.h  MouseInteractorStylePP.cpp  MouseInteractorStylePP.h  MyTruncate.cpp  OpenMesh_Header.h  VTK_Header.h  geodesicVTK.cpp  geodesicVTK.vcxproj  geodesicVTK.vcxproj.filters  utils.cpp  utils.h
trunk/GeodesicsOnMeshes/Examples/: CMakeLists.txt
trunk/GeodesicsOnMeshes/Testing/: CMakeLists.txt  TestGeodesicPath.cxx
trunk/Parameterization/: GPUSolver.cu  GPUSolver.cuh  IDCutHedge.h  IDList.cpp  IDSet.h  MeshStructure.h  MyParameterization.cpp  MyParameterization.h  (+9 more)
xin_wang_geodesic 2010-08-05/: BaseModel.cpp  BaseModel.h  ExactMethodForDGP.cpp  ExactMethodForDGP.h  ImprovedCHWithFilteringRule.cpp  ImprovedCHWithFilteringRule.h  Point3D.cpp  Point3D.h  PreviousCH.cpp  PreviousCH.h  RichModel.cpp  RichModel.h  XinWangImprovedCH.cpp  XinWangImprovedCH.h  stdafx.cpp  stdafx.h  testing_CH.sln  testing_CH.vcxproj  testing_CH.vcxproj.filters  xin_wang_geodesic.cpp
(+349 files in other folders)
